--- a/package/containerd/Config.in
+++ b/package/containerd/Config.in
@@ -26,6 +26,28 @@ config BR2_PACKAGE_CONTAINERD_DRIVER_BTRFS
 	help
 	  Build the btrfs snapshot driver for containerd.
 
+config BR2_PACKAGE_CONTAINERD_DRIVER_DEVMAPPER
+	bool "devmapper snapshot driver"
+	depends on BR2_TOOLCHAIN_HAS_THREADS # lvm2
+	depends on BR2_USE_MMU # lvm2
+	depends on !BR2_STATIC_LIBS # lvm2
+	select BR2_PACKAGE_LVM2
+	help
+	  Build the devmapper snapshot driver for containerd.
+
+config BR2_PACKAGE_CONTAINERD_DRIVER_ZFS
+	bool "zfs snapshot driver"
+	depends on BR2_LINUX_KERNEL # zfs
+	depends on BR2_PACKAGE_HAS_UDEV # zfs
+	select BR2_PACKAGE_ZFS
+	help
+	  Build the zfs snapshot driver for containerd.
+
+config BR2_PACKAGE_CONTAINERD_CRI
+	bool "Build Kubernetes CRI support"
+	help
+	  Build containerd with Kubernetes CRI support.
+
 endif
 
 comment "containerd needs a glibc or musl toolchain w/ threads"
